Added functionality to drag finder and target

--- a/src/PathfindingVisualizer/Grid/Node/Node.css
+++ b/src/PathfindingVisualizer/Grid/Node/Node.css
@@ -13,7 +13,7 @@
   background-color: rgb(28, 26, 26);
 }
 
-.node-finder {
+.node-center-align {
   display: flex;
   justify-content: center;
   align-items: center;
