--- a/src/PathfindingVisualizer/Grid/Node/Node.css
+++ b/src/PathfindingVisualizer/Grid/Node/Node.css
@@ -14,9 +14,8 @@
   animation-name: wall-ani;
   animation-duration: 1s;
   animation-fill-mode: forwards;
-  border:hidden;
-  border-radius: 8px;
-  z-index: 1;
+  border:none;
+  border-radius: 4px;
 }
 
 .node-visited {
@@ -43,14 +42,20 @@
   0% {
     width: 0%;
     height: 0%;
+    border:none;
+    border-radius: 0px;
   }
   80% {
     width: 120%;
     height: 120%;
+    border:none;
+    border-radius: 4px;
   }
   100% {
-    width: 110%;
+    width: 100%;
     height: 100%;
+    border:none;
+    border-radius: 0px;
   }
 }
 
