Implemented instant path generation while dragging finder or target

--- a/src/PathfindingVisualizer/Grid/Node/Node.css
+++ b/src/PathfindingVisualizer/Grid/Node/Node.css
@@ -19,10 +19,14 @@
 }
 
 .node-visited {
-  /* background-color: blue; */
   animation-name: visited-ani;
   animation-duration:1.5s;
   animation-fill-mode:forwards;
+}
+
+.node-visited-no-ani {
+  width:100%;
+  height:100%;
 }
 
 .node-path {
