--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -15,14 +15,14 @@
   display: inline-block;
   background-color: lightseagreen;
   width: 100%;
-  height: 70px;
+  height: 80px;
 }
 
 .header-inner {
   margin: auto;
   width: 90%;
-  height:100%;
-  margin-top:10px;
+  /* height:100%; */
+  margin-top:15px;
 }
 
 .header-wrapper {
@@ -46,9 +46,13 @@
   border:none;
   border-radius: 5px;
   transition:400ms;
+  text-align: center;
+  font-weight: bold;
+  font-size:20px;
+  cursor: pointer;
 }
 
-.header-button, .visualize-button {
+.header-button {
   display: flex;
   justify-content: center;
   align-content: center;
@@ -62,17 +66,26 @@
   transition:800ms;
 }
 
+button.visualize-button:disabled {
+  background-color: red;
+  transition:800ms;
+}
+
 .header-wrapper > ul {
   list-style-type: none;
 }
-div.visualize-button:hover {
+button.visualize-button:hover:enabled {
   background-color: gainsboro;
   transition:400ms
 }
 
-div.header-button:hover  {
+div.header-button:hover,  a.header-button:hover{
   color: yellow;
   transition:800ms;
+}
+
+a {
+  text-decoration: none;
 }
 
 @media all and (min-width: 800px){
