--- a/src/PathfindingVisualizer/Grid/Node/Node.css
+++ b/src/PathfindingVisualizer/Grid/Node/Node.css
@@ -22,16 +22,19 @@
   animation-name: visited-ani;
   animation-duration:1.5s;
   animation-fill-mode:forwards;
+  background-color: green;
 }
 
 .node-visited-no-ani {
   width:100%;
   height:100%;
+  background-color: cyan;
 }
 
 .node-path {
   width:100%;
   height: 100%;
+  background-color: yellow;
 }
 
 .node-center-align {
