--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -6,6 +6,10 @@
   font-weight: bold;
 }
 
+.algorithms-label {
+  margin-right: 10px;
+}
+
 .title > * {
   
   /* width:60%; */
@@ -50,6 +54,8 @@
   font-weight: bold;
   font-size:20px;
   cursor: pointer;
+  height: 100%;
+  color:mintcream;
 }
 
 .header-button {
@@ -59,6 +65,50 @@
   flex-direction: column;
   font-weight: bold;
   transition:800ms;
+}
+
+.dropdown-button{
+  display:flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: row;
+  font-size:18px;
+  font-weight: bold;
+  width:100%;
+  height:100%;
+  background-color: inherit;
+  border:none;
+  transition:800ms;
+  color:rgb(249, 255, 246);
+}
+
+.dropdown-container{
+  position: relative;
+}
+
+.dropdown-content{
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  z-index: 1;
+  flex-direction: column;
+  background-color: lightseagreen;
+  text-align: left;
+  width:100%;
+}
+
+.open {
+  display: flex;
+}
+
+.dropdown-content a{
+  /* display: none; */
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  color:mintcream;
+  /* width:100%; */
 }
 
 .visualize-loading {
@@ -71,15 +121,24 @@ button.visualize-button:disabled {
   transition:800ms;
 }
 
-.header-wrapper > ul {
+/* .header-wrapper > ul {
+  list-style-type: none;
+} */
+
+ul {
+  display:flex;
   list-style-type: none;
 }
+li {
+  cursor: pointer;
+}
+
 button.visualize-button:hover:enabled {
   background-color: gainsboro;
   transition:400ms
 }
 
-div.header-button:hover,  a.header-button:hover{
+li.header-button:hover,  a.header-button:hover, div.dropdown-button:hover{
   color: yellow;
   transition:800ms;
 }
