--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -1,5 +1,11 @@
+@import '/src/styles/palette.scss';
+
+
+$main-header:darken($quaternary,10%);
+$button-highlight: $primary;
+$border-radius: 5px;
+
 .title {
-  /* background: tomato; */
   height:50px;
   text-align: left;
   font-size: 30px;
@@ -7,25 +13,19 @@
 }
 
 .algorithms-label {
-  margin-right: 10px;
-}
-
-.title > * {
-  
-  /* width:60%; */
+  // margin-right: 10px;
 }
 
 .header-main {
   display: inline-block;
-  background-color: lightseagreen;
+  background-color: $main-header;
   width: 100%;
-  height: 80px;
+  height:auto;
 }
 
 .header-inner {
   margin: auto;
   width: 90%;
-  /* height:100%; */
   margin-top:15px;
 }
 
@@ -34,21 +34,14 @@
   flex-flow: row wrap;
 }
 
-.header-wrapper > *{
-  flex:1 auto;
+.flex-item, .flex-item-title{
+  flex: 1 auto;
   min-height:40px;
   color:rgb(249, 255, 246);
 }
 
-.header-test {
-  flex:1 auto;
-  background-color: mintcream;
-}
-
 .visualize-button {
-  background-color: black;
-  border:none;
-  border-radius: 5px;
+  background-color: $button-highlight;
   transition:400ms;
   text-align: center;
   font-weight: bold;
@@ -56,10 +49,18 @@
   cursor: pointer;
   height: 100%;
   color:mintcream;
+  border:none;
+  border-radius: $border-radius;
+
+  &:hover {
+      background-color: $tertiary;
+      transition:400ms;
+  }
 }
 
 .header-button {
   display: flex;
+  padding:10px;
   justify-content: center;
   align-content: center;
   flex-direction: column;
@@ -67,23 +68,34 @@
   transition:800ms;
 }
 
-.dropdown-button{
+.dropdown-btn{
   display:flex;
   justify-content: center;
   align-content: center;
-  flex-direction: row;
+  flex-direction: column;
   font-size:18px;
   font-weight: bold;
   width:100%;
   height:100%;
-  background-color: inherit;
   border:none;
-  transition:800ms;
+  border-radius: $border-radius;
   color:rgb(249, 255, 246);
+  transition:500ms;
+}
+
+// .dropdown-b {
+//   transition:800ms;
+// }
+
+.dropdown-btn-open {
+    background-color: $primary;
+    color:mintcream;
+    transition:250ms;
 }
 
 .dropdown-container{
   position: relative;
+  height:100%;
 }
 
 .dropdown-content{
@@ -92,23 +104,25 @@
   background-color: #f1f1f1;
   z-index: 1;
   flex-direction: column;
-  background-color: lightseagreen;
+  background-color: $main-header;
   text-align: left;
   width:100%;
+
+  & a {
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    color:mintcream;
+  }
+
+  & a:hover {
+      background-color: $button-highlight;
+      transition: 800ms;
+  }
 }
 
 .open {
   display: flex;
-}
-
-.dropdown-content a{
-  /* display: none; */
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  color:mintcream;
-  /* width:100%; */
 }
 
 .visualize-loading {
@@ -121,25 +135,23 @@ button.visualize-button:disabled {
   transition:800ms;
 }
 
-/* .header-wrapper > ul {
-  list-style-type: none;
-} */
-
 ul {
   display:flex;
   list-style-type: none;
+  margin:0;
+  padding:0;
 }
+
 li {
   cursor: pointer;
 }
 
-button.visualize-button:hover:enabled {
-  background-color: gainsboro;
-  transition:400ms
+.dropdown-btn-hover:hover{
+  color: $button-highlight;
 }
 
-li.header-button:hover,  a.header-button:hover, div.dropdown-button:hover{
-  color: yellow;
+li.header-button:hover,  a.header-button:hover{
+  color: $button-highlight;
   transition:800ms;
 }
 
@@ -148,5 +160,9 @@ a {
 }
 
 @media all and (min-width: 800px){
-  .title {flex:4}
+  .flex-item-title {flex:10%}
+}
+
+@media all and (max-width:500px){
+  // .header-main {height: 20vh;}
 }
