--- a/src/PathfindingVisualizer/Grid/Grid.scss
+++ b/src/PathfindingVisualizer/Grid/Grid.scss
@@ -1,8 +1,8 @@
 .grid-container {
   background-color:blue;
-  padding:20px;
-  width:80%;
-  height:600px;
+  // padding:20px;
+  width:98%;
+  height: 80vh;
   margin:auto;
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
@@ -15,5 +15,5 @@
 
 .grid-row {
   display:block;
-  height: 50px;
+  height: 30px;
 }
