--- a/src/PathfindingVisualizer/Grid/Node/Node.scss
+++ b/src/PathfindingVisualizer/Grid/Node/Node.scss
@@ -7,6 +7,10 @@ $visited-middle-colour: color.scale($tertiary, $alpha: -25%);
 $visited-final-colour: lighten($quaternary,5%);
 $path-color: $secondary;
 
+$node-background-color: whitesmoke;
+$node-wall-color:rgb(28, 26, 26);
+$node-visited-animation-duration:1000ms;
+
 .node {
   display: inline-block;
   background-color:whitesmoke;
@@ -21,7 +25,7 @@ $path-color: $secondary;
 .node-wall {
   width:100%;
   height:100%;
-  background-color: rgb(28, 26, 26);
+  background-color: $node-wall-color;
   animation-name: wall-ani;
   animation-duration: 2s;
   animation-fill-mode: forwards;
@@ -47,7 +51,6 @@ $path-color: $secondary;
   width:100%;
   height: 100%;
   background-color: darken($path-color, 10%);
-
 }
 
 .node-path {
