Buttons disabled while visualizing

--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -155,6 +155,11 @@ a {
   text-decoration: none;
 }
 
+
+.disabled {
+  cursor: wait;
+}
+
 @media all and (min-width: 800px){
   .flex-item-title {flex:10%}
 }
