--- a/src/styles/Node.scss
+++ b/src/styles/Node.scss
@@ -84,6 +84,12 @@ $node-visited-animation-duration:1000ms;
   animation-duration: 1s;
 }
 
+.finder-target-touch {
+  width:100%;
+  height:100%;
+  background-color: green;
+}
+
 @keyframes wall-ani {
   0% {
     transform:scale(.2, .2);
@@ -144,4 +150,8 @@ $node-visited-animation-duration:1000ms;
   100% {
     transform: scale(1,1);
   }
+}
+
+@keyframes finder-target-touch-ani {
+  
 }
