--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -20,7 +20,7 @@
   padding:20px;
   border:1px solid #888;
   width:80%;
-  height:80vh;
+  height:60vh;
   position:relative;
   border-radius: 20px;
 }
@@ -60,6 +60,19 @@
   }
   &:active {
     background-color: darken($primary, 5%);
+  }
+}
+
+@media screen and (max-width: 760px){
+  .modal-content {
+    height:auto;
+  }
+
+  .modal-buttons-container {
+    position:relative;
+  }
+  .modal-button {
+    // font-size: 15px;
   }
 }
 
