Added legend descriptions for algorithms. Fixed a bug related to buttons not being disabled on second run of Visualize button

--- a/src/styles/Legend.scss
+++ b/src/styles/Legend.scss
@@ -22,6 +22,10 @@
       justify-content: center;
     }
   }
+
+  .legend-algorithm-description{
+    flex:1 100%;
+  }
 }
 
 .legend-node {
@@ -37,6 +41,8 @@
   background-color: $node-wall-color;
   border:none;
 }
+
+
 
 .legend-node-visited {
   @extend .node-visited;
